AnalyseurDTD/dtd.output
Terminals which are not used

   EMPTY
   ANY


State 12 conflicts: 1 reduce/reduce
State 15 conflicts: 1 reduce/reduce
State 16 conflicts: 1 reduce/reduce
State 41 conflicts: 1 reduce/reduce


Grammar

    0 $accept: main $end

    1 main: dtd_list_opt

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt CLOSE
    3             | dtd_list_opt ELEMENT IDENT element_content CLOSE
    4             | /* empty */

    5 element_content: children
    6                | cp
    7                | choice
    8                | seq
    9                | mixed
   10                | /* empty */

   11 mixed: OPENPAR mixed_type CLOSEPAR

   12 mixed_type: PCDATA
   13           | TOKENTYPE
   14           | enumerate

   15 children: choice_card
   16         | seq_card

   17 choice_card: choice card_opt

   18 seq_card: seq card_opt

   19 card_opt: QMARK
   20         | PLUS
   21         | AST
   22         | /* empty */

   23 choice: OPENPAR choice_list_plus CLOSEPAR

   24 choice_list: choice_list PIPE cp
   25            | cp

   26 choice_list_plus: cp PIPE choice_list

   27 seq: OPENPAR seq_list CLOSEPAR

   28 seq_list: seq_list COMMA cp
   29         | cp

   30 cp: IDENT card_opt
   31   | children

   32 att_definition_opt: att_definition_opt attribute
   33                   | /* empty */

   34 attribute: IDENT att_type default_declaration

   35 att_type: CDATA
   36         | TOKENTYPE
   37         | enumerate

   38 enumerate: OPENPAR enum_list_plus CLOSEPAR

   39 enum_list_plus: enum_list PIPE item_enum

   40 enum_list: item_enum
   41          | enum_list PIPE item_enum

   42 item_enum: IDENT

   43 default_declaration: DECLARATION
   44                    | STRING
   45                    | FIXED STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 3
ATTLIST (259) 2
CLOSE (260) 2 3
OPENPAR (261) 11 23 27 38
CLOSEPAR (262) 11 23 27 38
COMMA (263) 28
PIPE (264) 24 26 39 41
FIXED (265) 45
EMPTY (266)
ANY (267)
PCDATA (268) 12
AST (269) 21
QMARK (270) 19
PLUS (271) 20
CDATA (272) 35
IDENT (273) 2 3 30 34 42
TOKENTYPE (274) 13 36
DECLARATION (275) 43
STRING (276) 44 45


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
main (23)
    on left: 1, on right: 0
dtd_list_opt (24)
    on left: 2 3 4, on right: 1 2 3
element_content (25)
    on left: 5 6 7 8 9 10, on right: 3
mixed (26)
    on left: 11, on right: 9
mixed_type (27)
    on left: 12 13 14, on right: 11
children (28)
    on left: 15 16, on right: 5 31
choice_card (29)
    on left: 17, on right: 15
seq_card (30)
    on left: 18, on right: 16
card_opt (31)
    on left: 19 20 21 22, on right: 17 18 30
choice (32)
    on left: 23, on right: 7 17
choice_list (33)
    on left: 24 25, on right: 24 26
choice_list_plus (34)
    on left: 26, on right: 23
seq (35)
    on left: 27, on right: 8 18
seq_list (36)
    on left: 28 29, on right: 27 28
cp (37)
    on left: 30 31, on right: 6 24 25 26 28 29
att_definition_opt (38)
    on left: 32 33, on right: 2 32
attribute (39)
    on left: 34, on right: 32
att_type (40)
    on left: 35 36 37, on right: 34
enumerate (41)
    on left: 38, on right: 14 37
enum_list_plus (42)
    on left: 39, on right: 38
enum_list (43)
    on left: 40 41, on right: 39 41
item_enum (44)
    on left: 42, on right: 39 40 41
default_declaration (45)
    on left: 43 44 45, on right: 34


state 0

    0 $accept: . main $end

    $default  reduce using rule 4 (dtd_list_opt)

    main          go to state 1
    dtd_list_opt  go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: dtd_list_opt .
    2 dtd_list_opt: dtd_list_opt . ATTLIST IDENT att_definition_opt CLOSE
    3             | dtd_list_opt . ELEMENT IDENT element_content CLOSE

    ELEMENT  shift, and go to state 4
    ATTLIST  shift, and go to state 5

    $default  reduce using rule 1 (main)


state 3

    0 $accept: main $end .

    $default  accept


state 4

    3 dtd_list_opt: dtd_list_opt ELEMENT . IDENT element_content CLOSE

    IDENT  shift, and go to state 6


state 5

    2 dtd_list_opt: dtd_list_opt ATTLIST . IDENT att_definition_opt CLOSE

    IDENT  shift, and go to state 7


state 6

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT . element_content CLOSE

    OPENPAR  shift, and go to state 8
    IDENT    shift, and go to state 9

    $default  reduce using rule 10 (element_content)

    element_content  go to state 10
    mixed            go to state 11
    children         go to state 12
    choice_card      go to state 13
    seq_card         go to state 14
    choice           go to state 15
    seq              go to state 16
    cp               go to state 17


state 7

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT . att_definition_opt CLOSE

    $default  reduce using rule 33 (att_definition_opt)

    att_definition_opt  go to state 18


state 8

   11 mixed: OPENPAR . mixed_type CLOSEPAR
   23 choice: OPENPAR . choice_list_plus CLOSEPAR
   27 seq: OPENPAR . seq_list CLOSEPAR

    OPENPAR    shift, and go to state 19
    PCDATA     shift, and go to state 20
    IDENT      shift, and go to state 9
    TOKENTYPE  shift, and go to state 21

    mixed_type        go to state 22
    children          go to state 23
    choice_card       go to state 13
    seq_card          go to state 14
    choice            go to state 24
    choice_list_plus  go to state 25
    seq               go to state 26
    seq_list          go to state 27
    cp                go to state 28
    enumerate         go to state 29


state 9

   30 cp: IDENT . card_opt

    AST    shift, and go to state 30
    QMARK  shift, and go to state 31
    PLUS   shift, and go to state 32

    $default  reduce using rule 22 (card_opt)

    card_opt  go to state 33


state 10

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT element_content . CLOSE

    CLOSE  shift, and go to state 34


state 11

    9 element_content: mixed .

    $default  reduce using rule 9 (element_content)


state 12

    5 element_content: children .
   31 cp: children .

    CLOSE     reduce using rule 5 (element_content)
    CLOSE     [reduce using rule 31 (cp)]
    $default  reduce using rule 5 (element_content)


state 13

   15 children: choice_card .

    $default  reduce using rule 15 (children)


state 14

   16 children: seq_card .

    $default  reduce using rule 16 (children)


state 15

    7 element_content: choice .
   17 choice_card: choice . card_opt

    AST    shift, and go to state 30
    QMARK  shift, and go to state 31
    PLUS   shift, and go to state 32

    CLOSE     reduce using rule 7 (element_content)
    CLOSE     [reduce using rule 22 (card_opt)]
    $default  reduce using rule 7 (element_content)

    card_opt  go to state 35


state 16

    8 element_content: seq .
   18 seq_card: seq . card_opt

    AST    shift, and go to state 30
    QMARK  shift, and go to state 31
    PLUS   shift, and go to state 32

    CLOSE     reduce using rule 8 (element_content)
    CLOSE     [reduce using rule 22 (card_opt)]
    $default  reduce using rule 8 (element_content)

    card_opt  go to state 36


state 17

    6 element_content: cp .

    $default  reduce using rule 6 (element_content)


state 18

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt . CLOSE
   32 att_definition_opt: att_definition_opt . attribute

    CLOSE  shift, and go to state 37
    IDENT  shift, and go to state 38

    attribute  go to state 39


state 19

   23 choice: OPENPAR . choice_list_plus CLOSEPAR
   27 seq: OPENPAR . seq_list CLOSEPAR
   38 enumerate: OPENPAR . enum_list_plus CLOSEPAR

    OPENPAR  shift, and go to state 40
    IDENT    shift, and go to state 41

    children          go to state 23
    choice_card       go to state 13
    seq_card          go to state 14
    choice            go to state 24
    choice_list_plus  go to state 25
    seq               go to state 26
    seq_list          go to state 27
    cp                go to state 28
    enum_list_plus    go to state 42
    enum_list         go to state 43
    item_enum         go to state 44


state 20

   12 mixed_type: PCDATA .

    $default  reduce using rule 12 (mixed_type)


state 21

   13 mixed_type: TOKENTYPE .

    $default  reduce using rule 13 (mixed_type)


state 22

   11 mixed: OPENPAR mixed_type . CLOSEPAR

    CLOSEPAR  shift, and go to state 45


state 23

   31 cp: children .

    $default  reduce using rule 31 (cp)


state 24

   17 choice_card: choice . card_opt

    AST    shift, and go to state 30
    QMARK  shift, and go to state 31
    PLUS   shift, and go to state 32

    $default  reduce using rule 22 (card_opt)

    card_opt  go to state 35


state 25

   23 choice: OPENPAR choice_list_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 46


state 26

   18 seq_card: seq . card_opt

    AST    shift, and go to state 30
    QMARK  shift, and go to state 31
    PLUS   shift, and go to state 32

    $default  reduce using rule 22 (card_opt)

    card_opt  go to state 36


state 27

   27 seq: OPENPAR seq_list . CLOSEPAR
   28 seq_list: seq_list . COMMA cp

    CLOSEPAR  shift, and go to state 47
    COMMA     shift, and go to state 48


state 28

   26 choice_list_plus: cp . PIPE choice_list
   29 seq_list: cp .

    PIPE  shift, and go to state 49

    $default  reduce using rule 29 (seq_list)


state 29

   14 mixed_type: enumerate .

    $default  reduce using rule 14 (mixed_type)


state 30

   21 card_opt: AST .

    $default  reduce using rule 21 (card_opt)


state 31

   19 card_opt: QMARK .

    $default  reduce using rule 19 (card_opt)


state 32

   20 card_opt: PLUS .

    $default  reduce using rule 20 (card_opt)


state 33

   30 cp: IDENT card_opt .

    $default  reduce using rule 30 (cp)


state 34

    3 dtd_list_opt: dtd_list_opt ELEMENT IDENT element_content CLOSE .

    $default  reduce using rule 3 (dtd_list_opt)


state 35

   17 choice_card: choice card_opt .

    $default  reduce using rule 17 (choice_card)


state 36

   18 seq_card: seq card_opt .

    $default  reduce using rule 18 (seq_card)


state 37

    2 dtd_list_opt: dtd_list_opt ATTLIST IDENT att_definition_opt CLOSE .

    $default  reduce using rule 2 (dtd_list_opt)


state 38

   34 attribute: IDENT . att_type default_declaration

    OPENPAR    shift, and go to state 50
    CDATA      shift, and go to state 51
    TOKENTYPE  shift, and go to state 52

    att_type   go to state 53
    enumerate  go to state 54


state 39

   32 att_definition_opt: att_definition_opt attribute .

    $default  reduce using rule 32 (att_definition_opt)


state 40

   23 choice: OPENPAR . choice_list_plus CLOSEPAR
   27 seq: OPENPAR . seq_list CLOSEPAR

    OPENPAR  shift, and go to state 40
    IDENT    shift, and go to state 9

    children          go to state 23
    choice_card       go to state 13
    seq_card          go to state 14
    choice            go to state 24
    choice_list_plus  go to state 25
    seq               go to state 26
    seq_list          go to state 27
    cp                go to state 28


state 41

   30 cp: IDENT . card_opt
   42 item_enum: IDENT .

    AST    shift, and go to state 30
    QMARK  shift, and go to state 31
    PLUS   shift, and go to state 32

    PIPE      reduce using rule 22 (card_opt)
    PIPE      [reduce using rule 42 (item_enum)]
    $default  reduce using rule 22 (card_opt)

    card_opt  go to state 33


state 42

   38 enumerate: OPENPAR enum_list_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 55


state 43

   39 enum_list_plus: enum_list . PIPE item_enum
   41 enum_list: enum_list . PIPE item_enum

    PIPE  shift, and go to state 56


state 44

   40 enum_list: item_enum .

    $default  reduce using rule 40 (enum_list)


state 45

   11 mixed: OPENPAR mixed_type CLOSEPAR .

    $default  reduce using rule 11 (mixed)


state 46

   23 choice: OPENPAR choice_list_plus CLOSEPAR .

    $default  reduce using rule 23 (choice)


state 47

   27 seq: OPENPAR seq_list CLOSEPAR .

    $default  reduce using rule 27 (seq)


state 48

   28 seq_list: seq_list COMMA . cp

    OPENPAR  shift, and go to state 40
    IDENT    shift, and go to state 9

    children     go to state 23
    choice_card  go to state 13
    seq_card     go to state 14
    choice       go to state 24
    seq          go to state 26
    cp           go to state 57


state 49

   26 choice_list_plus: cp PIPE . choice_list

    OPENPAR  shift, and go to state 40
    IDENT    shift, and go to state 9

    children     go to state 23
    choice_card  go to state 13
    seq_card     go to state 14
    choice       go to state 24
    choice_list  go to state 58
    seq          go to state 26
    cp           go to state 59


state 50

   38 enumerate: OPENPAR . enum_list_plus CLOSEPAR

    IDENT  shift, and go to state 60

    enum_list_plus  go to state 42
    enum_list       go to state 43
    item_enum       go to state 44


state 51

   35 att_type: CDATA .

    $default  reduce using rule 35 (att_type)


state 52

   36 att_type: TOKENTYPE .

    $default  reduce using rule 36 (att_type)


state 53

   34 attribute: IDENT att_type . default_declaration

    FIXED        shift, and go to state 61
    DECLARATION  shift, and go to state 62
    STRING       shift, and go to state 63

    default_declaration  go to state 64


state 54

   37 att_type: enumerate .

    $default  reduce using rule 37 (att_type)


state 55

   38 enumerate: OPENPAR enum_list_plus CLOSEPAR .

    $default  reduce using rule 38 (enumerate)


state 56

   39 enum_list_plus: enum_list PIPE . item_enum
   41 enum_list: enum_list PIPE . item_enum

    IDENT  shift, and go to state 60

    item_enum  go to state 65


state 57

   28 seq_list: seq_list COMMA cp .

    $default  reduce using rule 28 (seq_list)


state 58

   24 choice_list: choice_list . PIPE cp
   26 choice_list_plus: cp PIPE choice_list .

    PIPE  shift, and go to state 66

    $default  reduce using rule 26 (choice_list_plus)


state 59

   25 choice_list: cp .

    $default  reduce using rule 25 (choice_list)


state 60

   42 item_enum: IDENT .

    $default  reduce using rule 42 (item_enum)


state 61

   45 default_declaration: FIXED . STRING

    STRING  shift, and go to state 67


state 62

   43 default_declaration: DECLARATION .

    $default  reduce using rule 43 (default_declaration)


state 63

   44 default_declaration: STRING .

    $default  reduce using rule 44 (default_declaration)


state 64

   34 attribute: IDENT att_type default_declaration .

    $default  reduce using rule 34 (attribute)


state 65

   39 enum_list_plus: enum_list PIPE item_enum .
   41 enum_list: enum_list PIPE item_enum .

    PIPE      reduce using rule 41 (enum_list)
    $default  reduce using rule 39 (enum_list_plus)


state 66

   24 choice_list: choice_list PIPE . cp

    OPENPAR  shift, and go to state 40
    IDENT    shift, and go to state 9

    children     go to state 23
    choice_card  go to state 13
    seq_card     go to state 14
    choice       go to state 24
    seq          go to state 26
    cp           go to state 68


state 67

   45 default_declaration: FIXED STRING .

    $default  reduce using rule 45 (default_declaration)


state 68

   24 choice_list: choice_list PIPE cp .

    $default  reduce using rule 24 (choice_list)
